--- a/rmd/Group-1-RMD-Final-Report.Rmd
+++ b/rmd/Group-1-RMD-Final-Report.Rmd
@@ -23,8 +23,13 @@ options(scipen=50, digits=4)
 
 library(dplyr)
 library(ggplot2)
-libr
-
+library(tree)
+library(MASS)
+library(ISLR)
+library(car)
+library(sampling)
+library(caret)
+library(AppliedPredictiveModeling)
 ```
 
 
@@ -68,11 +73,34 @@ tracks_df <- tracks_df %>%
               mutate(num_artists = length(as.list(strsplit(artists, ","))))
 
 ```
+```{r}
+popular_df
+```
+```{r}
+popular_labels <- popular_df[, c("id", "name", "artists", "id_artists", "release_date")]
+popular_factors <- popular_df[, c("explicit", "key", "mode", "time_signature")]
+popular_numeric <- popular_df[, c("danceability", "energy", "loudness", "speechiness", "acousticness", "instrumentalness", "liveness", "valence", "tempo")]
+popular_scaled <- scale(popular_numeric)
+popular_factors <- lapply(popular_factors,factor)
+popular_df2 <- data.frame(popular_labels, popular_factors, popular_scaled)
+popular_df2
+```
 
 ```{r}
-x = "['Dick Haymes', 'Victor Young', 'His Orchestra']"
+## VIF
+model_fit<-glm(popularity~duration_ms+factor(explicit)+ danceability+energy+factor(key)+loudness+factor(mode)+speechiness+acousticness+instrumentalness+liveness+valence+tempo+factor(time_signature), data=popular_df)
 
-str_replace()
+vif(model_fit)
+
+# Influential Outliers 
+popular_df[cooks.distance(model_fit)>1,]
+```
+
+```{r}
+ctrl <- trainControl(method = "cv", number = 10)
+
+#fit a regression model and use k-fold CV to evaluate performance
+model <- train(popularity~duration_ms+factor(explicit)+ danceability+energy+factor(key)+loudness+factor(mode)+speechiness+acousticness+instrumentalness+liveness+valence+tempo+factor(time_signature), data = popular_df, method = "rpart", trControl = ctrl)
 ```
 
 
