--- a/rmd/Group-1-RMD-Final-Report.Rmd
+++ b/rmd/Group-1-RMD-Final-Report.Rmd
@@ -21,7 +21,6 @@ knitr::opts_chunk$set(fig.width=6, fig.height=4)
 
 # Set the number of significant digits
 options(scipen=50, digits=4)
-
 library(dplyr)
 library(ggplot2)
 library(tree)
@@ -95,18 +94,8 @@ tracks_pop_scaled
 
 ### Correlation Matrix
 
-```{r}
-#Preliminary Analysis
-library(readr)
-artists_df <- read.csv("~/Data606/Project/artists.csv")
-tracks_df <- read.csv("~/Data606/Project/tracks.csv")
-```
-```{r}
-
-```
  
 ```{r}
-head(tracks_df)
 dim(tracks_df)
 ```
  
@@ -123,10 +112,6 @@ test_substr
 tracks_df$decade <- eval(substr(tracks_df$release_date, 1,3))
 ```
 
-
-```{r}
-head(tracks_df)
-```
 
 ```{r}
 library(ggplot2)
@@ -179,14 +164,11 @@ plt4 <- ggplot(tracks_clean, aes(x = factor(decade), y = duration_ms)) +
 ```
 
 ```{r}
-library(gridExtra)
 grid.arrange(plt1, plt2, plt3, plt4, top = "Variation by Decade", ncol = 2)
 ```
 
 
 ```{r}
-#install.packages("ggcorrplot")
-library(ggcorrplot)
 
 # Calculate the correlation matrix
 cor_matrix <- cor(popular_numeric)
@@ -213,7 +195,7 @@ popular_df2$popularity_coded <- as.factor(popular_df2$popularity_coded)
 ctrl <- trainControl(method = "cv", number = 10)
 ```
 
-## 3.1 LDA
+## 4.1 LDA
 ```{r}
 #fit a regression model and use k-fold CV to evaluate performance
 lda_model <- train(popularity_coded~duration_ms+explicit+ danceability+energy+key+loudness+mode+speechiness+acousticness+instrumentalness+liveness+valence+tempo+time_signature, data=popular_df2, method = "lda", trControl = ctrl)
@@ -222,22 +204,43 @@ print(lda_model)
 ```
 
 
-### 3.1.1 Assumptions
+### 4.1.1 Assumptions
+
+Multivariate Normality - mulri.norm Test
+
+$H_0$ (Null hypothesis): The variables follow a multivariate normal distribution.
+
+$H_A$ (Alternative hypothesis): The variables do not follow a multivariate normal distribution.
+
+We will use an alpha value of 0.05.
 
 ```{r}
-## VIF
-model_fit<-lm(popularity~duration_ms+factor(explicit)+ danceability+energy+factor(key)+loudness+factor(mode)+speechiness+acousticness+instrumentalness+liveness+valence+tempo+factor(time_signature), data=popular_df2)
-
-vif(model_fit)
-
-# Influential Outliers 
-popular_df[cooks.distance(model_fit)>1,]
-
-# Constant Variance
-ncvTest(model_fit)
+# Multivariate Normality 
+N <- nrow(popular_scaled)
+idx = sample(1:N, size=1000, replace = FALSE)
+popular_sample = popular_scaled[idx,]
+mult.norm(popular_sample)$mult.test
 ```
 
-## 4.1 Logistic Regression
+Equality of Variance - Levene Test
+
+$H_0$ (Null hypothesis): Sample variances are equal.
+
+$H_A$ (Alternative hypothesis): Samples variances are not equal.
+
+We will use an alpha value of 0.05.
+
+```{r}
+# Equality of Variance
+popularity_var_test <- data.frame(popular_factors, popular_df2["popularity"])
+N <- nrow(popularity_var_test)
+idx = sample(1:N, size=1000, replace = FALSE)
+popular_sample2 = popularity_var_test[idx,]
+leveneTest(popularity~., data = popular_sample2)
+```
+
+
+## 4.2 Logistic Regression
 
 ```{r}
 #fit a regression model and use k-fold CV to evaluate performance
@@ -246,27 +249,50 @@ lr_model <- train(popularity_coded ~ duration_ms+explicit+danceability+energy+ke
 summary(lr_model)
 ```
 
-## 4.2 Classification Tree
+### 4.2.1 Assumptions
+
+Absence of Multicolinearity - Variance Inflation Factor
+
+```{r}
+## VIF
+model_fit<-lm(popularity~duration_ms+factor(explicit)+ danceability+energy+factor(key)+loudness+factor(mode)+speechiness+acousticness+instrumentalness+liveness+valence+tempo+factor(time_signature), data=popular_df2)
+
+vif(model_fit)
+```
+
+
+Lack of Influential Outliers - Cook's Distance
+
+```{r}
+# Influential Outliers 
+popular_df[cooks.distance(model_fit)>1,]
+
+```
+
+## 4.3 Classification Tree
 ```{r}
 tree_model_class <- train(popularity_coded ~ duration_ms+explicit+danceability+energy+key+loudness+mode+speechiness+acousticness+instrumentalness+liveness+valence+tempo+time_signature, data = popular_df2, trControl = ctrl, method = "rpart")
 
 print(tree_model_class)
 ```
 
-# Getting the Popularity index from a song
+### 4.3.1 Assumptions
 
-## 3.2 Regression Tree
+For tree methods, we do not have any assumptions to test besides our observations being independant of each other, which they are.
+
+## 4.4 Regression Tree
 ```{r}
 tree_model_reg <- train(popularity ~ duration_ms+explicit+danceability+energy+key+loudness+mode+speechiness+acousticness+instrumentalness+liveness+valence+tempo+time_signature, data = popular_df2, trControl = ctrl, method = "rpart")
 print(tree_model_reg)
 ```
 
-### 3.2.1 Assumptions
+### 4.4.1 Assumptions
 
-## 3.4 Summary of Findings
+For tree methods, we do not have any assumptions to test besides our observations being independant of each other, which they are.
 
 
-## 4.3 Summary of Findings
+
+## 4.5 Summary of Findings
 
 # 5 Conclusion
 
